modules/lib/dependencies/libopus/cobalt_opus_shim.h

/**
 * Enables or disables in-band forward error correction.
 *
 * Applies OPUS_SET_INBAND_FEC through opus_encoder_ctl. In-band FEC applies only
 * to the LPC (SILK) layer.
 *
 * @param enc the encoder handle from cobalt_opus_encoder_create.
 * @param fec 0 to disable, 1 to enable (switching to SILK under loss when
 *            beneficial), 2 to enable without forcing SILK for music.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_inband_fec(void *enc, int32_t fec);
/**
 * Sets the encoder's expected packet-loss percentage.
 *
 * Applies OPUS_SET_PACKET_LOSS_PERC through opus_encoder_ctl. Higher values
 * trigger progressively more loss-resistant coding at the expense of quality in
 * the absence of loss.
 *
 * @param enc      the encoder handle from cobalt_opus_encoder_create.
 * @param lossPerc the expected loss percentage in the range 0 to 100.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_packet_loss_perc(void *enc, int32_t lossPerc);
/**
 * Enables or disables discontinuous transmission.
 *
 * Applies OPUS_SET_DTX through opus_encoder_ctl. DTX applies only to the LPC
 * (SILK) layer.
 *
 * @param enc the encoder handle from cobalt_opus_encoder_create.
 * @param dtx 1 to enable discontinuous transmission, 0 to disable.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_dtx(void *enc, int32_t dtx);
/**
 * Forces the encoder to code as mono or stereo regardless of the input format.
 *
 * Applies OPUS_SET_FORCE_CHANNELS through opus_encoder_ctl.
 *
 * @param enc      the encoder handle from cobalt_opus_encoder_create.
 * @param channels COBALT_OPUS_AUTO for not forced, 1 for forced mono, 2 for
 *                 forced stereo.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_force_channels(void *enc, int32_t channels);
/**
 * Sets the type-of-signal hint that biases the encoder's mode selection.
 *
 * Applies OPUS_SET_SIGNAL through opus_encoder_ctl.
 *
 * @param enc    the encoder handle from cobalt_opus_encoder_create.
 * @param signal COBALT_OPUS_AUTO, COBALT_OPUS_SIGNAL_VOICE or
 *               COBALT_OPUS_SIGNAL_MUSIC.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_signal(void *enc, int32_t signal);
/**
 * Sets the encoder's hinted signal depth in significant bits.
 *
 * Applies OPUS_SET_LSB_DEPTH through opus_encoder_ctl. The value helps the
 * encoder identify near-silence; for opus_encode (integer) input the effective
 * value is the minimum of this and 16.
 *
 * @param enc   the encoder handle from cobalt_opus_encoder_create.
 * @param depth the input precision in bits, between 8 and 24.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_lsb_depth(void *enc, int32_t depth);
/**
 * Pins the encoder's coded bandpass to a specific value.
 *
 * Applies OPUS_SET_BANDWIDTH through opus_encoder_ctl. Most callers should
 * instead leave this at COBALT_OPUS_AUTO and bound the bandwidth with
 * cobalt_opus_encoder_set_max_bandwidth.
 *
 * @param enc       the encoder handle from cobalt_opus_encoder_create.
 * @param bandwidth COBALT_OPUS_AUTO or one of the COBALT_OPUS_BANDWIDTH_*
 *                  selectors.
 * @return COBALT_OPUS_OK on success, COBALT_OPUS_BAD_ARG for a NULL encoder,
 *         otherwise the libopus error code from opus_encoder_ctl.
 */
int32_t cobalt_opus_encoder_set_bandwidth(void *enc, int32_t bandwidth);