modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/audio/codec/opus/bindings/CobaltOpus.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_inband_fec(void *enc, int32_t fec)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_inband_fec$address() {
        return cobalt_opus_encoder_set_inband_fec.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_inband_fec(void *enc, int32_t fec)
     * }
     */
    public static int cobalt_opus_encoder_set_inband_fec(MemorySegment enc, int fec) {
        var mh$ = cobalt_opus_encoder_set_inband_fec.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_inband_fec", enc, fec);
            }
            return (int)mh$.invokeExact(enc, fec);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_packet_loss_perc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_packet_loss_perc");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_packet_loss_perc(void *enc, int32_t lossPerc)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_packet_loss_perc$descriptor() {
        return cobalt_opus_encoder_set_packet_loss_perc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_packet_loss_perc(void *enc, int32_t lossPerc)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_packet_loss_perc$handle() {
        return cobalt_opus_encoder_set_packet_loss_perc.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_packet_loss_perc(void *enc, int32_t lossPerc)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_packet_loss_perc$address() {
        return cobalt_opus_encoder_set_packet_loss_perc.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_packet_loss_perc(void *enc, int32_t lossPerc)
     * }
     */
    public static int cobalt_opus_encoder_set_packet_loss_perc(MemorySegment enc, int lossPerc) {
        var mh$ = cobalt_opus_encoder_set_packet_loss_perc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_packet_loss_perc", enc, lossPerc);
            }
            return (int)mh$.invokeExact(enc, lossPerc);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_dtx {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_dtx");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_dtx(void *enc, int32_t dtx)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_dtx$descriptor() {
        return cobalt_opus_encoder_set_dtx.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_dtx(void *enc, int32_t dtx)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_dtx$handle() {
        return cobalt_opus_encoder_set_dtx.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_dtx(void *enc, int32_t dtx)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_dtx$address() {
        return cobalt_opus_encoder_set_dtx.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_dtx(void *enc, int32_t dtx)
     * }
     */
    public static int cobalt_opus_encoder_set_dtx(MemorySegment enc, int dtx) {
        var mh$ = cobalt_opus_encoder_set_dtx.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_dtx", enc, dtx);
            }
            return (int)mh$.invokeExact(enc, dtx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_force_channels {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_force_channels");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_force_channels(void *enc, int32_t channels)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_force_channels$descriptor() {
        return cobalt_opus_encoder_set_force_channels.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_force_channels(void *enc, int32_t channels)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_force_channels$handle() {
        return cobalt_opus_encoder_set_force_channels.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_force_channels(void *enc, int32_t channels)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_force_channels$address() {
        return cobalt_opus_encoder_set_force_channels.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_force_channels(void *enc, int32_t channels)
     * }
     */
    public static int cobalt_opus_encoder_set_force_channels(MemorySegment enc, int channels) {
        var mh$ = cobalt_opus_encoder_set_force_channels.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_force_channels", enc, channels);
            }
            return (int)mh$.invokeExact(enc, channels);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_signal {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_signal");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_signal(void *enc, int32_t signal)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_signal$descriptor() {
        return cobalt_opus_encoder_set_signal.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_signal(void *enc, int32_t signal)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_signal$handle() {
        return cobalt_opus_encoder_set_signal.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_signal(void *enc, int32_t signal)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_signal$address() {
        return cobalt_opus_encoder_set_signal.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_signal(void *enc, int32_t signal)
     * }
     */
    public static int cobalt_opus_encoder_set_signal(MemorySegment enc, int signal) {
        var mh$ = cobalt_opus_encoder_set_signal.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_signal", enc, signal);
            }
            return (int)mh$.invokeExact(enc, signal);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_lsb_depth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_lsb_depth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_lsb_depth(void *enc, int32_t depth)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_lsb_depth$descriptor() {
        return cobalt_opus_encoder_set_lsb_depth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_lsb_depth(void *enc, int32_t depth)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_lsb_depth$handle() {
        return cobalt_opus_encoder_set_lsb_depth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_lsb_depth(void *enc, int32_t depth)
     * }
     */
    public static MemorySegment cobalt_opus_encoder_set_lsb_depth$address() {
        return cobalt_opus_encoder_set_lsb_depth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_lsb_depth(void *enc, int32_t depth)
     * }
     */
    public static int cobalt_opus_encoder_set_lsb_depth(MemorySegment enc, int depth) {
        var mh$ = cobalt_opus_encoder_set_lsb_depth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_opus_encoder_set_lsb_depth", enc, depth);
            }
            return (int)mh$.invokeExact(enc, depth);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_opus_encoder_set_bandwidth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpus.C_INT,
            CobaltOpus.C_POINTER,
            CobaltOpus.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpus.findOrThrow("cobalt_opus_encoder_set_bandwidth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static FunctionDescriptor cobalt_opus_encoder_set_bandwidth$descriptor() {
        return cobalt_opus_encoder_set_bandwidth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_opus_encoder_set_bandwidth(void *enc, int32_t bandwidth)
     * }
     */
    public static MethodHandle cobalt_opus_encoder_set_bandwidth$handle() {
        return cobalt_opus_encoder_set_bandwidth.HANDLE;
    }
